; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_cmp_testlib.c_load_csr.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_cmp_testlib.c_load_csr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"rb\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @load_csr(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i8* null, i8** %4, align 8
  store i8* null, i8** %5, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = call i32 @TEST_ptr(i8* %6)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %14

9:                                                ; preds = %1
  %10 = load i8*, i8** %3, align 8
  %11 = call i8* @BIO_new_file(i8* %10, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  store i8* %11, i8** %5, align 8
  %12 = call i32 @TEST_ptr(i8* %11)
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %15, label %14

14:                                               ; preds = %9, %1
  store i8* null, i8** %2, align 8
  br label %22

15:                                               ; preds = %9
  %16 = load i8*, i8** %5, align 8
  %17 = call i8* @d2i_X509_REQ_bio(i8* %16, i32* null)
  store i8* %17, i8** %4, align 8
  %18 = call i32 @TEST_ptr(i8* %17)
  %19 = load i8*, i8** %5, align 8
  %20 = call i32 @BIO_free(i8* %19)
  %21 = load i8*, i8** %4, align 8
  store i8* %21, i8** %2, align 8
  br label %22

22:                                               ; preds = %15, %14
  %23 = load i8*, i8** %2, align 8
  ret i8* %23
}

declare dso_local i32 @TEST_ptr(i8*) #1

declare dso_local i8* @BIO_new_file(i8*, i8*) #1

declare dso_local i8* @d2i_X509_REQ_bio(i8*, i32*) #1

declare dso_local i32 @BIO_free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
